[gd_scene load_steps=4 format=3 uid="uid://clibstgxaah3l"]

[ext_resource type="Script" uid="uid://c2r0fhnnc3o6h" path="res://shared/ui/popups/battle_confirmation_popup.gd" id="1_rr8to"]
[ext_resource type="Texture2D" uid="uid://b3fw6rdj4np63" path="res://assets/error.png" id="2_rr8to"]

[sub_resource type="Theme" id="Theme_o3qu8"]

[node name="BattleConfirmationPopup" type="PopupPanel"]
oversampling_override = 1.0
initial_position = 1
size = Vector2i(160, 230)
visible = true
always_on_top = true
theme = SubResource("Theme_o3qu8")
script = ExtResource("1_rr8to")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Orc"
horizontal_alignment = 1

[node name="EnemyIcon" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_rr8to")
stretch_mode = 3

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ConfirmButton" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer/Buttons"]
layout_mode = 2
text = "Battle!"

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer/Buttons"]
layout_mode = 2
text = "Cancel"

[connection signal="popup_hide" from="." to="." method="_on_popup_hide"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/Buttons/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/Buttons/CancelButton" to="." method="_on_cancel_button_pressed"]
